--- a/details.html
+++ b/details.html
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Main</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Main</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Partners</a>
+                    <a class="nav-link active" href="details.html">Details</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="rules.html">Rules</a>
