--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Partners</a>
+                    <a class="nav-link" href="details.html">Details</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="rules.html">Rules</a>
