--- a/rules.html
+++ b/rules.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Partners</a>
+                    <a class="nav-link" href="details.html">Details</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="rules.html">Rules</a>
